--- a/psql.yml
+++ b/psql.yml
@@ -19,7 +19,11 @@
       state: present
       
    - name: Enable psql
-     service: name=postgresql status=started
+     service: 
+       name: postgresql
+       state: started
     
    - name: Start psql
-     service: name=postgresql status=enabled
+     service: 
+       name: postgresql
+       state: enabled
