--- a/sonar.yml
+++ b/sonar.yml
@@ -12,9 +12,9 @@
       name: unzip
       state: present
 
-  - name: Install openjdk
+  - name: Install default-jdk
     apt:
-      name: openjdk-8-jdk
+      name: default-jdk
       state: present
       
   - name: Install python-psycopg2
@@ -22,11 +22,11 @@
       name: python-psycopg2
       state: present
       
-  - name: Create the sonar user for running the SonarQube services
+  - name: Create sonar user
     user:
       name: sonar
-      comment: System user for running SonarQube
-      
+      expires: -1
+  
   - name: Create sonar user in databse
     become_user: postgres
     postgresql_user:
@@ -93,16 +93,17 @@
       regexp: '^%ADMIN ALL='
       line: 'sonar   ALL=(ALL)  NOPASSWD: ALL'
       validate: '/usr/sbin/visudo -cf %s'
-
-  - name: start sonarqube
-    shell:
-     cmd: /opt/sonarqube/bin/linux-x86-64/sonar.sh start
+      
+  - name: Copy sonar service to systemd
+    copy:
+      src: /home/ansadmin/playbooks/sonarqube.service
+      dest: /etc/systemd/system/
      
   - name: Enable Firewall
     ufw:
      state: enabled
     
-  - name: Allow Port 8080
+  - name: Allow Port 9000
     ufw:
      rule: allow
      port: '9000'
