--- a/sonar.yml
+++ b/sonar.yml
@@ -98,7 +98,21 @@
     copy:
       src: /home/ansadmin/playbooks/sonarqube.service
       dest: /etc/systemd/system/
-     
+      
+  - name: Start sonarqube service
+    service:
+      name: sonarqube
+      state: started
+      
+  - name: Enable sonarqube service
+    service:
+      name: sonarqube
+      state: enabled
+      
+  - name: Restart sonarqube service
+    service:
+      name: sonarqube
+      state: restarted
   - name: Enable Firewall
     ufw:
      state: enabled
@@ -112,4 +126,13 @@
     ufw:
      rule: allow
      name: OpenSSH
-  
+      
+  - name: copy nginx file
+    copy: 
+      src: /home/ansadmin/playbooks/sonarqube
+      dest: /etc/nginx/sites-enabled/
+      
+  - name: Restart nginx service
+    service:
+      name: nginx
+      state: restarted
