--- a/psql.yml
+++ b/psql.yml
@@ -18,7 +18,7 @@
       name: postgresql-contrib
       state: present
       
-   - name: Enable psql
+   - name: Start psql
      service: 
        name: postgresql
        state: started
