--- a/sonar.yml
+++ b/sonar.yml
@@ -94,6 +94,13 @@
       regexp: "sonar.jdbc.url=jdbc:postgresql://localhost/sonar"
       insertafter: "^#sonar.jdbc.url=jdbc:postgresql://localhost/sonar"
       line: "sonar.jdbc.url=jdbc:postgresql://localhost/sonar"
+      
+  - name: Configure SonarQube webport
+    lineinfile:
+      path: "/opt/sonarqube/conf/sonar.properties"
+      regexp: "sonar.web.host=0.0.0.0"
+      insertafter: "^#sonar.web.host=0.0.0.0"
+      line: "sonar.web.host=127.0.0.1"
 
   - name: Configure SonarQube to run as the sonar user
     lineinfile:
