--- a/psql.yml
+++ b/psql.yml
@@ -2,6 +2,16 @@
 - hosts: sonar
   become: true
   tasks:
+   - name: Install default-jdk
+     apt:
+       name: default-jdk
+       state: present
+       
+   - name: Install python-psycopg2
+     apt:
+       name: python-psycopg2
+       state: present
+      
    - name: Download psql
      shell:
       cmd: sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
