--- a/psql.yml
+++ b/psql.yml
@@ -27,3 +27,17 @@
      apt: 
       name: postgresql-contrib
       state: present
+      
+  - name: Create sonar user in databse
+    become_user: postgres
+    postgresql_user:
+      name: sonar
+      password: sonar
+      role_attr_flags: CREATEDB,NOSUPERUSER
+      
+  - name: Create sonar database
+    become_user: postgres
+    postgresql_db:
+      name: sonar
+      owner: sonar
+      
