--- a/sonarqube.service
+++ b/sonarqube.service
@@ -8,8 +8,8 @@ Type=forking
 ExecStart=/opt/sonarqube/bin/linux-x86-64/sonar.sh start
 ExecStop=/opt/sonarqube/bin/linux-x86-64/sonar.sh stop
 
-User=ansadmin
-Group=ansadmin
+User=sonarqube
+Group=sonarqube
 Restart=always
 
 [Install]
