--- a/sonarqube.service
+++ b/sonarqube.service
@@ -5,8 +5,8 @@ After=syslog.target network.target
 [Service]
 Type=forking
 
-ExecStart=/opt/sonarqube/bin/linux-x86-64/sonar.sh start
-ExecStop=/opt/sonarqube/bin/linux-x86-64/sonar.sh stop
+ExecStart=/opt/sonar/sonarqube-8.0/bin/linux-x86-64/sonar.sh start
+ExecStop=/opt/sonar/sonarqube-8.0/bin/linux-x86-64/sonar.sh stop
 
 User=sonarqube
 Group=sonarqube
