--- a/psql.yml
+++ b/psql.yml
@@ -4,7 +4,7 @@
   tasks:
    - name: Add java key
      shell:
-       cmd: add-apt-repository ppa:webupd8team/java
+       cmd: add-apt-repository ppa:linuxuprising/java
        
    - name: Install oracle-java8-installer
      apt:
