--- a/sonar-install.yml
+++ b/sonar-install.yml
@@ -30,7 +30,7 @@
        
    - name: install mysql-python
      apt:
-       name: MySQL-python
+       name: PyMySQL
        
    - name: Create sonarqube database
      mysql_db:
