--- a/sonar-install.yml
+++ b/sonar-install.yml
@@ -29,8 +29,8 @@
        name: mysql-server
        
    - name: install mysql-python
-     pip3:
-       name: PyMySQL
+     shell:
+       cmd: pip3 install PyMySQL -y
        
    - name: Create sonarqube database
      mysql_db:
