--- a/sonar-install.yml
+++ b/sonar-install.yml
@@ -28,7 +28,7 @@
      apt:
        name: mysql-server
        
-   - name: Install easy_install
+   - name: Install python-pip
      apt:
        name: python-pip
              
