--- a/sonar-install.yml
+++ b/sonar-install.yml
@@ -10,6 +10,10 @@
      apt:
        name: default-jdk
        
+   - name: Install unzip
+     apt:
+       name: unzip
+       
    - name: install nginx
      apt:
        name: nginx
@@ -32,7 +36,7 @@
      apt:
        name: python-pip
              
-   - name: install mysql-python
+   - name: Install PyMySQL
      pip:
        name: PyMySQL
        
