--- a/sonar.yml
+++ b/sonar.yml
@@ -84,7 +84,7 @@
       path: "/opt/sonarqube/bin/linux-x86-64/sonar.sh"
       regexp: "RUN_AS_USER=sonar"
       insertafter: "#RUN_AS_USER="
-      line: "RUN_AS_USER=sonarqube"
+      line: "RUN_AS_USER=sonar"
       
   - name: Copy sonar service to systemd
     copy:
