--- a/sonar.yml
+++ b/sonar.yml
@@ -33,16 +33,9 @@
 
   - name: Extract SonarQube
     unarchive:
-      src: https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-6.7.6.zip
+      src: https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-8.0.zip
       dest: /opt/sonar/
       remote_src: yes
-      
-  - name: Link this version of sonarqube as the server SonarQube version
-    file:
-      src: "/opt/sonar/sonarqube-6.7.6"
-      dest: "/opt/sonarqube"
-      state: link
-      owner: sonar
       
   - name: Configure SonarQube DB username
     lineinfile:
@@ -53,35 +46,35 @@
 
   - name: Configure SonarQube DB password
     lineinfile:
-      path: "/opt/sonarqube/conf/sonar.properties"
+      path: "/opt/sonar/sonarqube-8.0/conf/sonar.properties"
       regexp: "^sonar.jdbc.password="
       insertafter: "^#sonar.jdbc.password="
       line: "sonar.jdbc.password=sonar"
 
   - name: Configure SonarQube DB connection string
     lineinfile:
-      path: "/opt/sonarqube/conf/sonar.properties"
+      path: "/opt/sonar/sonarqube-8.0/conf/sonar.properties"
       regexp: "sonar.jdbc.url=jdbc:postgresql://localhost/sonar"
       insertafter: "^#sonar.jdbc.url=jdbc:postgresql://localhost/sonar"
       line: "sonar.jdbc.url=jdbc:postgresql://localhost/sonar"
       
   - name: Configure SonarQube webport
     lineinfile:
-      path: "/opt/sonarqube/conf/sonar.properties"
+      path: "/opt/sonar/sonarqube-8.0/conf/sonar.properties"
       regexp: "sonar.web.host=0.0.0.0"
       insertafter: "^#sonar.web.host=0.0.0.0"
       line: "sonar.web.host=127.0.0.1"
    
   - name: Change javaOpts
     lineinfile:
-      path: "/opt/sonarqube/conf/sonar.properties"
+      path: "/opt/sonar/sonarqube-8.0/conf/sonar.properties"
       regexp: "sonar.search.javaOpts="
       insertafter: "^#sonar.search.javaOpts="
       line: "sonar.search.javaOpts=-Xmx512m -Xms128m -XX:+HeapDumpOnOutOfMemoryError"
 
   - name: Configure SonarQube to run as the sonar user
     lineinfile:
-      path: "/opt/sonarqube/bin/linux-x86-64/sonar.sh"
+      path: "/opt/sonar/sonarqube-8.0/bin/linux-x86-64/sonar.sh"
       regexp: "RUN_AS_USER=sonar"
       insertafter: "#RUN_AS_USER="
       line: "RUN_AS_USER=sonar"
