--- a/sonar-scanner.yml
+++ b/sonar-scanner.yml
@@ -23,7 +23,7 @@
    - name: Making the file binary executable
      become: yes
      shell:
-       cmd: chmod +x sonar-scanner-3.2.0.1227-linux/bin/sonar-scanner
+       cmd: chmod +x /opt/sonarscanner/sonar-scanner-3.2.0.1227-linux/bin/sonar-scanner
         
    - name: create a symbolic link
      file: src=/opt/sonarscanner/sonar-scanner-3.2.0.1227-linux/bin/sonar-scanner dest=/usr/local/bin/sonar-scanner state=link
