--- a/sonarqube.yml
+++ b/sonarqube.yml
@@ -36,25 +36,44 @@
        name: postgresql
        state: reloaded  
        
-   - name: Wait for 1 minutes
-     pause:
-       minutes: 1
-       
-   - name: Install python-psycopg2
-     apt:
-       name: python-psycopg2
-       state: present
-       
    -  name: Update the system
       become: yes
       shell:
         cmd: apt-get update
         
+   - name: Install default-jdk
+     apt:
+       name: default-jdk
+       state: present
+       
+   - name: Install python-psycopg2
+     apt:
+       name: python-psycopg2
+       state: present
+      
+   - name: Download psql
+     shell:
+      cmd: sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
+   
+   - name: Add key
+     shell:
+      cmd: wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | apt-key add -
+   
+   - name: Install postgresql
+     apt: 
+      name: postgresql
+      state: present
+    
+   - name: Install psql-contrib
+     apt: 
+      name: postgresql-contrib
+      state: present
+
    - name: Reloads Postgres
      become: yes
      service:
        name: postgresql
-       state: reloaded 
+       state: reloaded
      
    - name: Install wget
      apt:
