--- a/nexus.yml
+++ b/nexus.yml
@@ -18,16 +18,16 @@
   tasks:
 
   - name: install wget
-    apt: pkg='wget' state=present
+    yum: pkg='wget' state=installed
 
   - name: install jdk 7
-    apt: pkg='default-jdk' state=present
+    yum: pkg='java-1.8.0-openjdk' state=installed
   
   - name: install git
-    apt: pkg='git' state=present
+    yum: pkg='git' state=installed
 
   - name: install unzip
-    apt: pkg='unzip' state=present
+    yum: pkg='unzip' state=installed
 
   - name: create "nexus" group
     group: name=nexus 
@@ -85,18 +85,18 @@
     shell:
       cmd: service nexus start
       
-#   - name: NEXUS | First-time install admin password
-#     set_fact:
-#       current_nexus_admin_password: '6f518a87-a90f-40f3-b372-0877190ebb17'
+  - name: NEXUS | First-time install admin password
+    set_fact:
+      current_nexus_admin_password: '6f518a87-a90f-40f3-b372-0877190ebb17'
    
-#   - name: NEXUS | Declare scripts
-#     include_tasks: scripts/declare_script.yml
-#     with_items: security/admin_password
+  - name: NEXUS | Declare scripts
+    include_tasks: scripts/declare_script.yml
+    with_items: security/admin_password
 
-#   - name: NEXUS | Security -> Admin Password
-#     import_tasks: action/security/admin_password.yml
+  - name: NEXUS | Security -> Admin Password
+    import_tasks: action/security/admin_password.yml
     
-#   - name: restart nexus
-#     become: yes
-#     shell:
-#       cmd: service nexus restart
+  - name: restart nexus
+    become: yes
+    shell:
+      cmd: service nexus restart
